add event stream to list endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 spring.r2dbc.url=r2dbc:h2:mem:///reactive
 spring.r2dbc.username=sa
 spring.r2dbc.password=
+spring.r2dbc.pool.initial-size=1
+spring.r2dbc.pool.max-size=1
 
 spring.sql.init.mode=always
 spring.sql.init.platform=h2
+
+# speed up boot time
+spring.data.jpa.repositories.enabled=false
+spring.data.jdbc.repositories.enabled=false
+
+spring.profiles.active=default
